# python_fastapi_stack

./: .cursorrules  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  build_and_publish.yml
app/: main.py  paths.py
app/api/v1/: api.py
app/api/v1/endpoints/: guest.py  users.py
app/core/: app.py  notify.py
app/crud/: __init__.py  base.py  board.py  contact_emails.py  faq.py  guest.py  partners.py  program.py  programs.py  staff.py  stats.py  timeline.py  user.py  variables.py  wishlist.py
app/data/: todo.md
app/db/: init_db.py
app/middleware/: error_handler.py  template_context.py
app/models/: __init__.py  admin.py  base.py  contact_emails.py  faq.py  guest.py  partners.py  people.py  programs.py  settings.py  stats.py  timeline.py  user.py  user_permissions.py  validators.py  variables.py  wishlist.py
app/routes/: admin.py  api.py  auth.py  views.py
app/utils/: cleanup.py  model_utils.py  sanitizer.py  security.py  session.py  templates.py  upload.py
app/views/: router.py
app/views/pages/: admin.py  guests.py  programs.py  root.py
app/views/pages/admin/: admin.py  backup.py  board.py  contact_emails.py  deps.py  faq.py  login.py  partners.py  programs.py  staff.py  stats.py  timeline.py  user.py  users.py  variables.py  wishlist.py
app/views/static/css/: admin.css  base.css  components.css  effects.css  print.css  styles.css  utilities.css  variables.css
app/views/static/css/components/: accordion.css  buttons.css  cards.css  forms.css  navbar.css  navigation.css  other.css  sections.css  text.css
app/views/static/css/pages/: contact.css
app/views/static/js/: admin.js  counters.js  donations.js  forms.js  navbar.js  preloader.js  scripts.js  scroll-effect.js  utils.js
app/views/static/js/claude/: scripts.js
app/views/templates/: __init__.py
app/views/templates/admin/: 403.html  account.html  backup.html  base.html  board.html  contact_emails.html  faq.html  home.html  navbar.html  partners.html  programs.html  staff.html  stats.html  timeline.html  users.html  variables.html  wishlist.html
app/views/templates/base/: base.html  footer.html  gold-bar.html  navbar.html  navbar_logged_in.html
app/views/templates/guest/: create.html  edit.html  list.html  view.html
app/views/templates/login/: login.html
app/views/templates/programs/: homeless-services.html
app/views/templates/root/: about.html  contact.html  contact_success.html  donate.html  home.html  services.html  volunteer.html
app/views/templates/root/sections/: contact.html  faq.html  follow_us.html  location.html
app/views/templates/temp/: about.html  claude-1.html  claude.html  contact.html  old.html  services.html  volunteer.html
migrations/versions/: 0878fa3a1d87_admin.py  08f04158143a_init.py  0f663dcb48da_add_order_to_staff_and_board2.py  1b9d062489c8_added_permissions_programs_backup.py  26698ffdef74_add_order_to_staff_and_board.py  2a05525d99cf_init.py  5c4809fec0fc_init.py  632585c44651_admin.py  754715e57d9e_add_order_field_to_partners.py  85b91e9e7c29_kwc_variables.py  89195d799e68_make_staff_photo_url_nullable.py  910ce6cb5ac4_admin.py  ab8c01f8bff0_add_user_permissions.py  afa86353aeec_contact_email.py  afca973b9871_admin.py  c6616d1b18b3_add_order_field_to_partners.py  c752dc55190a_updated_programs.py  ccccf91500ed_updated_faq.py  d5db4a9d9477_edit_wishlist.py  e977c99c7011_updated_programs.py
python_fastapi_stack/data/: .env
tests/api/v1/endpoints/: test_guest_endpoints.py
tests/core/: test_database.py
tests/crud/: test_guest_crud.py
tests/views/pages/: test_account_pages.py  test_guest_pages.py
thunder-tests/: thunderCollection.json
